# abitray

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: fastapi.yml
app/: api.py  database.py  schemas.py
