[tool.poetry]
name = "abitray"
version = "0.1.0"
description = "abitray service"
authors = ["sam <sam@freighttrust.com>"]
license = "GPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
